<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.sszuev</groupId>
    <artifactId>jena-owl2</artifactId>
    <version>1.3.1-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!--https://mvnrepository.com/artifact/org.apache.jena/jena-arq-->
        <version.jena>5.0.0</version.jena>
        <!--https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-->
        <version.junit>5.10.2</version.junit>
        <!--https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core-->
        <version.jmh>1.37</version.jmh>

        <!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin-->
        <version.maven-gpg-plugin>3.1.0</version.maven-gpg-plugin>
        <!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin-->
        <version.maven-source-plugin>3.3.0</version.maven-source-plugin>
        <!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin-->
        <version.maven-javadoc-plugin>3.6.3</version.maven-javadoc-plugin>
        <!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin-->
        <version.maven-jar-plugin>3.3.0</version.maven-jar-plugin>
        <!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin-->
        <version.maven-compiler-plugin>3.12.1</version.maven-compiler-plugin>
        <!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin-->
        <version.maven-surefire-plugin>3.2.5</version.maven-surefire-plugin>
        <!--https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-generator-maven-plugin-->
        <version.jmh-maven-plugin>0.2.2</version.jmh-maven-plugin>
    </properties>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <organization>
        <name>ssz</name>
        <url>https://github.com/sszuev</url>
    </organization>

    <developers>
        <developer>
            <name>ssz</name>
            <email>sss.zuev@gmail.com</email>
            <id>sszuev</id>
        </developer>
    </developers>


    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/sszuev/jena-owl2/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git://github.com/sszuev/jena-owl2.git</connection>
        <developerConnection>scm:git:ssh://github.com/sszuev/jena-owl2.git</developerConnection>
        <url>https://github.com/sszuev/jena-owl2</url>
    </scm>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${version.maven-gpg-plugin}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>${version.jena}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>${version.jmh}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>${version.jmh}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${version.maven-source-plugin}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${version.maven-javadoc-plugin}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${version.maven-jar-plugin}</version>
                <executions>
                    <execution>
                        <id>attache-tests</id>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.maven-surefire-plugin}</version>
            </plugin>
            <plugin>
                <groupId>pw.krejci</groupId>
                <artifactId>jmh-maven-plugin</artifactId>
                <version>${version.jmh-maven-plugin}</version>
            </plugin>
        </plugins>
    </build>

</project>